# tauri-mobile

./: .gitignore  Cargo.toml  README.md  aarch64-linux-android24-clang.cmd  build.gradle.kts  mobile.toml  package.json  target.rs  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
src/: App.tsx  lib.rs  main.rs  main.tsx  routes.tsx
src-tauri/: Cargo.toml  mobile.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Navbar.tsx  Navitem.tsx  Sidebar.tsx
src/layouts/: Layout.tsx
src/theme/: index.tsx
src/views/: Chat.tsx  Index.tsx
