[package]
name = "hello"
version = "0.1.0"
authors = ["Ludea <ludealol.olol@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hello-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2.0.0-alpha.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tiny_http = "0.12"
tauri = "2.0.0-alpha.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.3"

[target.'cfg(target_os = "ios")'.dependencies]
env_logger = "0.10.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
