[package]
name = "hello"
version = "0.1.0"
authors = ["Ludea <ludealol.olol@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hello-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tiny_http = "0.12"
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.12.0"

[target.'cfg(target_os = "ios")'.dependencies]
env_logger = "0.10.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[patch.crates-io]
wry = { git = "https://github.com/tauri-apps/wry", branch = "dev" }
tao = { git = "https://github.com/tauri-apps/tao", branch = "dev" }
